# liblumix

./: CMakeLists.txt  README.md  liblumix.cpp  liblumix.h
.github/workflows/: release.yml
docs/: lumix_protocol_notes.md
